--- a/schemas/CMakeLists.txt
+++ b/schemas/CMakeLists.txt
@@ -2,9 +2,10 @@ set(SCHEMAS
     animal
     master
     plant
+    chitragupta
     )
 
 foreach(SCHEMA ${SCHEMAS})
-    execute_process(COMMAND ${FLATC} --cpp -o ${CMAKE_CURRENT_SOURCE_DIR} 
+    execute_process(COMMAND ${FLATC} --cpp -o ${CMAKE_CURRENT_SOURCE_DIR}
         --cpp-std c++17 ${CMAKE_CURRENT_SOURCE_DIR}/${SCHEMA}.fbs)
 endforeach()
