--- a/schemas/CMakeLists.txt
+++ b/schemas/CMakeLists.txt
@@ -7,5 +7,5 @@ set(SCHEMAS
 
 foreach(SCHEMA ${SCHEMAS})
     execute_process(COMMAND ${FLATC} --cpp -o ${CMAKE_CURRENT_SOURCE_DIR}
-        --gen-mutable --gen-object-api --cpp-std c++17 ${CMAKE_CURRENT_SOURCE_DIR}/${SCHEMA}.fbs)
+        --gen-mutable --gen-object-api --reflect-names --cpp-std c++17 ${CMAKE_CURRENT_SOURCE_DIR}/${SCHEMA}.fbs)
 endforeach()
