Fixed incomplete creation of nested structures

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,7 +9,7 @@ if(CCACHE_PROGRAM)
     set_property(GLOBAL PROPERTY RULE_LAUNCH_LINK "${CCACHE_PROGRAM}")
 endif()
 
-set(CMAKE_BUILD_TYPE "RELEASE")
+set(CMAKE_BUILD_TYPE "DEBUG")
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_POSITION_INDEPENDENT_CODE 1)
 
@@ -54,4 +54,4 @@ endfunction()
 add_code(animal_test)
 add_code(animal_test_obj)
 add_code(world_test)
-add_code(world_test_obj)
+#add_code(world_test_obj)
